--- a/10. More OOP/Gazpacho.ipynb
+++ b/10. More OOP/Gazpacho.ipynb
@@ -203,6 +203,91 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "qIQ9hNfiFjPx",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Iterator"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gtXz_XNfFqm0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import re\n",
+        "import reprlib\n",
+        "RE_WORD = re.compile('\\w+')\n",
+        "\n",
+        "class Sentence:\n",
+        "    def __init__(self, text):\n",
+        "        self.text = text\n",
+        "        self.words = RE_WORD.findall(text)\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        return 'Sentence(%s)' % reprlib.repr(self.text)\n",
+        "\n",
+        "    def __iter__(self):\n",
+        "        return SentenceIterator(self.words)\n",
+        "\n",
+        "class SentenceIterator:\n",
+        "    def __init__(self, words):\n",
+        "        self.words = words\n",
+        "        self.index = 0\n",
+        "\n",
+        "    def __next__(self):\n",
+        "        try:\n",
+        "            word = self.words[self.index]\n",
+        "        except IndexError:\n",
+        "            raise StopIteration()\n",
+        "        self.index += 1\n",
+        "        return word\n",
+        "\n",
+        "    def __iter__(self):\n",
+        "        return self \n",
+        "    \n",
+        "for word in Sentence('This is a very long sentence to demonstate the iterator protocol!'):\n",
+        "    print(word)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-yDMTyCrGmgL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import re\n",
+        "import reprlib\n",
+        "RE_WORD = re.compile('\\w+')\n",
+        "\n",
+        "class Sentence:\n",
+        "    def __init__(self, text):\n",
+        "        self.text = text\n",
+        "        self.words = RE_WORD.findall(text)\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        return 'Sentence(%s)' % reprlib.repr(self.text)\n",
+        "\n",
+        "    def __iter__(self):\n",
+        "        for word in self.words:\n",
+        "            yield word # Does it quack like a duck?\n",
+        "            \n",
+        "for word in Sentence('This is a very long sentence to demonstate the iterator protocol!'):\n",
+        "    print(word)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "xVF4n6qa6-9F",
         "colab_type": "text"
       },
