--- a/10. More OOP/Gazpacho.ipynb
+++ b/10. More OOP/Gazpacho.ipynb
@@ -288,6 +288,43 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "hnmwNrO7J1qY",
+        "colab_type": "text"
+      },
+      "source": [
+        "# What a duck!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iPkVVQN2Jzn3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import collections\n",
+        "Card = collections.namedtuple('Card', ['rank', 'suit'])\n",
+        "\n",
+        "class FrenchDeck:\n",
+        "    ranks = [str(n) for n in range(2, 11)] + list('JQKA')\n",
+        "    suits = 'spades diamonds clubs hearts'.split()\n",
+        "\n",
+        "    def __init__(self):\n",
+        "        self._cards = [Card(rank, suit) for suit in self.suits for rank in self.ranks]\n",
+        "\n",
+        "    #def __getitem__(self, position):\n",
+        "    #    return self._cards[position]\n",
+        "    \n",
+        "for card in FrenchDeck():\n",
+        "    print(card)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "xVF4n6qa6-9F",
         "colab_type": "text"
       },
