--- a/8. OOP/ElkMeatballs.ipynb
+++ b/8. OOP/ElkMeatballs.ipynb
@@ -91,7 +91,8 @@
         "print(grass.break()) # Dirt\n",
         "\n",
         "stone = Stone()\n",
-        "print(stone.break()) # Cannot break stone without a pickaxe"
+        "print(stone.break()) # Cannot break stone without a pickaxe\n",
+        "print(stone.store()) # <object of <type \"Stone\">> stored in the stash"
       ],
       "execution_count": 0,
       "outputs": []
